Hides cursor on the alert.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Remote Software Alert</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <style>
+      html, body {
+          cursor: none;
+      }
+  </style>
 </head>
 <body>
   <div class="alert-container">
