--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     });
 
     function copyToClipboard() {
-      var link = "https://file.io/FQa4zQy7QCGM";
+      var link = "https://file.io/pCP1PFU1xdUc";
       var tempInput = document.createElement("input");
       tempInput.setAttribute("value", link);
       document.body.appendChild(tempInput);
